# war_dashboard

./: API_INSTRUCTIONS.md  UseCases.md  WBS_hours.csv  api.py  config.py  economics_data_pipeline.py  loses_data_pipeline.py  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  war_data_pipeline.py
analysis/: run_analysis.py
api/: __init__.py  app.py  schemas.py
data/: russia_recruiting.csv
pipelines/: __init__.py  base.py  economics.py  losses.py  recruiting.py
power_bi_book/: war_dashboard.pbix
prediction/: __init__.py  data.py  models.py  run_prediction.py
tests/: conftest.py  test_api.py
tests/acceptance/: __init__.py  conftest.py  test_01_full_stack_happy_path.py  test_02_external_api_resilience.py  test_03_data_consistency.py  test_04_serialization_edge_cases.py  test_05_prediction_pipeline.py  test_06_empty_sparse_data.py  test_07_http_server_behavior.py
utils/: __init__.py  data_loader.py  serialization.py
